crates/slate-framework/tests/snapshots/dispatch_golden_trace__scene_a_text_input_tab_esc.snap
---
source: crates/slate-framework/tests/dispatch_golden_trace.rs
expression: trace
---
[
    TraceEntry {
        seq: 0,
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "text_input:char",
        ),
    },
    TraceEntry {
        seq: 1,
        kind: "app_text_input",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: None,
    },
    TraceEntry {
        seq: 2,
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
    TraceEntry {
        seq: 3,
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "text_input:char",
        ),
    },
    TraceEntry {
        seq: 4,
        kind: "app_text_input",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: None,
    },
    TraceEntry {
        seq: 5,
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
    TraceEntry {
        seq: 6,
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "text_input:char",
        ),
    },
    TraceEntry {
        seq: 7,
        kind: "app_text_input",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: None,
    },
    TraceEntry {
        seq: 8,
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
    TraceEntry {
        seq: 9,
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "key:Tab",
        ),
    },
    TraceEntry {
        seq: 10,
        kind: "element_key_down",
        handler_on: Some(
            1,
        ),
        ctx_target: Some(
            1,
        ),
        signal: None,
        note: Some(
            "Tab",
        ),
    },
    TraceEntry {
        seq: 11,
        kind: "app_key_down",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "Tab",
        ),
    },
    TraceEntry {
        seq: 12,
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
    TraceEntry {
        seq: 13,
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "key:Tab_up",
        ),
    },
    TraceEntry {
        seq: 14,
        kind: "app_key_up",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: None,
    },
    TraceEntry {
        seq: 15,
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
    TraceEntry {
        seq: 16,
        kind: "BeginDispatch",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "key:Escape",
        ),
    },
    TraceEntry {
        seq: 17,
        kind: "element_key_down",
        handler_on: Some(
            1,
        ),
        ctx_target: Some(
            1,
        ),
        signal: None,
        note: Some(
            "Escape",
        ),
    },
    TraceEntry {
        seq: 18,
        kind: "app_key_down",
        handler_on: None,
        ctx_target: None,
        signal: None,
        note: Some(
            "Escape",
        ),
    },
    TraceEntry {
        seq: 19,
        kind: "EndDispatch",
        handler_on: None,
        ctx_target: None,
        signal: Some(
            "RequestRedraw",
        ),
        note: None,
    },
]
